# PyVerse2D

./: .gitignore  LICENSE  README.md  _sync_version.py  _upload.py  pyproject.toml  to_do.txt
.github/workflows/: publish.yml
engine/: __init__.py  _version.py  window.py
engine/_core/: __init__.py  _entity.py  _math_object.py  _world.py
engine/_flag/: __init__.py  _update_phase.py
engine/_flags/: _stack_mode.py
engine/_internal/: __init__.py  validators.py
engine/_rendering/: __init__.py  _renderer.py  _screen.py  _window.py  camera.py  renderer.py
engine/abc/: __init__.py  _component.py  _layer.py  _math_object.py  _shape.py  _system.py
engine/asset/: _color.py  _image.py  _text.py
engine/assets/: __init__.py  image.py  text.py
engine/component/: __init__.py  _collider.py  _rigid_body.py  _shape_renderer.py  _sprite_renderer.py  _text_renderer.py  _transform.py
engine/components/: collider.py  rigid_body.py  shape_renderer.py  sprite.py  sprite_renderer.py  static_body.py  text_renderer.py  transform.py
engine/core/: __init__.py  asset.py  component.py  entity.py  shape.py  system.py  world.py
engine/ecs/: __init__.py  _entity.py  _system.py  _world.py
engine/math/: _line.py  _point.py  _vector.py  line.py  point.py  vector.py
engine/rendering/: image.py  viewport.py
engine/scene/: __init__.py  _scene.py  _world_layer.py
engine/shape/: __init__.py  __init__.pyi  _capsule.py  _circle.py  _ellipse.py  _polygon.py  _rect.py  _segment.py  circle.py  ellipse.py  polygon.py  rect.py
engine/shapes/: __init__.py  capsule.py  circle.py  ellipse.py  line.py  rect.py  triangle.py
engine/system/: __init__.py  _collision.py  _gravity.py  _physics.py  _render.py
engine/systems/: __init__.py  gravity.py  render.py
engine/tools/: __init__.py  walls_definer.py
pyverse2d/: __init__.py  _version.py
pyverse2d/_core/: __init__.py  _geometry.py  _positionable.py  _transform.py  _transformable.py
pyverse2d/_flag/: __init__.py  _activity.py  _audio_state.py  _component_type.py  _coord_space.py  _scene_state.py  _stack_mode.py  _super.py
pyverse2d/_internal/: __init__.py  _callbacks.py  _processor.py  _profiler.py  _protocols.py  _tools.py  _traceback.py  _validators.py  pipeline.py
pyverse2d/_managers/: __init__.py  _audio.py  _context.py  _coordinates.py  _event.py  _inputs.py  _key.py  _mouse.py  _time.py  _ui.py  _video.py
pyverse2d/_rendering/: __init__.py  _camera.py  _context.py  _coord.py  _fbo.py  _label_rendering.py  _pipeline.py  _quad.py  _screen.py  _shape_rendering.py  _sprite_rendering.py  _viewport.py  _window.py
pyverse2d/abc/: __init__.py  _asset.py  _audio_handle.py  _bundle.py  _composite_shape.py  _layer.py  _manager.py  _math_object.py  _mouse_cursor.py  _primitive_shape.py  _render_object.py  _request.py  _shape.py  _space.py  _vertex.py  _vertex_shape.py  _widget.py
pyverse2d/asset/: __init__.py  _animation.py  (+9 more)
(+209 files in other folders)
