[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyverse2d"
version = "0.20.10"
description = "2D Game Engine using pyglet (OpenGL) for rendering"
authors = [{ name = "WhiteWolf45380" }]
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["game", "engine", "2d", "pyglet", "opengl"]
dependencies = [
    "pyglet>=2.0",
    "numpy>=1.20"
]

[project.urls]
Homepage = "https://github.com/WhiteWolf45380/pyverse2d"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyverse2d*"]

[tool.setuptools.package-data]
"pyverse2d" = ["_assets/**/*"]